--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -16,7 +16,10 @@ carouselPhotos:
   - /assets/images/IMG_0303.jpeg
 ---
 
-<h1 class="text-center">{{ page.name }}</h1>
+<div class="container text-center">
+  <h1 class="display-3">{{ page.name }}</h1>
+  <p class="display-6 text-muted">{{ page.birthDate }} - {{ page.deathDate }}</p>
+</div>
 
 <div class="container col-md-4">
   <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -41,8 +44,8 @@ carouselPhotos:
 
 <hr>
 
-<div class="container bg-body rounded w-50">
-  <h3 class="text-center">Последние слова от семьи</h3>
+<div class="container bg-body rounded d-grid gap-5">
+  <h3 class="text-center display-4">Последние слова от семьи</h3>
 
   <nav class="p-2">
     <div class="nav nav-tabs bg-light flex-column d-grid gap-3" id="nav-tab" role="tablist">
@@ -85,59 +88,80 @@ carouselPhotos:
 
 <hr>
 
-<div class="container bg-body rounded w-50 d-grid gap-5">
-  <h3 class="text-center">Воспоминания от семьи</h3>
+<div class="container bg-body rounded d-grid gap-4">
+  <h3 class="text-center display-4">Воспоминания от семьи</h3>
 
   <div class="container bg-light shadow border p-4">
-    <h4 class="text-center">Знания языков</h4>
-    <p>Я всегда восхищался, сколько мой отец знает языков. Это просто какое-то немыслимое число для человека, который почти не использовал их для профессиональной деятельности:</p>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Русский</li>
-      <li class="list-group-item">Английский</li>
-      <li class="list-group-item">Немецкий</li>
-      <li class="list-group-item">Финский</li>
-      <li class="list-group-item">Нидерландский</li>
-    </ul><br>
-    <p>Это только те языки, которые я слышал от него вживую. Наверняка, я еще о каких-то забыл.</p>
-    <p>
-      Причем, это увлечение языками не ограничивалось просто их использовании с живыми людьми при поездках. Когда он разбирался со своей машиной Škoda, он скачал оригинальную документацию на чешском,
-      чешско-русский словарь и сидел ее изучал.
-    </p>
+    <figure>
+      <blockquote>
+        <p class="lead text-center display-6">Знания языков</p>
+        <p>Я всегда восхищался, сколько мой отец знает языков. Это просто какое-то немыслимое число для человека, который почти не использовал их для профессиональной деятельности:</p>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Русский</li>
+          <li class="list-group-item">Английский</li>
+          <li class="list-group-item">Немецкий</li>
+          <li class="list-group-item">Финский</li>
+          <li class="list-group-item">Нидерландский</li>
+        </ul><br>
+        <p>Это только те языки, которые я слышал от него вживую. Наверняка, я еще о каких-то забыл.</p>
+        <p>
+          Причем, это увлечение языками не ограничивалось просто их использовании с живыми людьми при поездках. Когда он разбирался со своей машиной Škoda, он скачал оригинальную документацию на чешском,
+          чешско-русский словарь и сидел ее изучал.
+        </p>
+      </blockquote>
+      <figcaption class="blockquote-footer text-end">
+        Святослав Сергеевич Думченко, сын
+      </figcaption>
+    </figure>
   </div>
 
   <div class="container bg-light shadow border p-4">
-    <h4 class="text-center">Физика в суде</h4>
-    <p>
-      Как-то папе пришел штраф за превышение скорости. И, то ли чтобы не платить штраф и потрепать нервы, то ли потому что считал себя правым, он решил взять фотографию превышения с камеры,
-      применить немного физики и доказать, что он не превышал.
-    </p>
-    <p>
-      Он взял длину смазывания верхней части колеса, диаметр колеса, высчитал угол камеры, нагуглил скорость затвора полицейской камеры и
-      высчитал по этим данным скорость автомобиля на фотографии. Меня до сих пор поражает, насколько можно заморочиться и найти себе интересное занятие в опротестовывании штрафа.
-    </p>
-    <p>
-      Что было в суде я не знаю, но, похоже, либо физике не место в суде, либо научная степень судьи оказалась выше, потому что штраф в итоге пришлось заплатить.
-    </p>
+    <figure>
+      <blockquote>
+        <p class="lead text-center display-6">Физика в суде</p>
+        <p>
+          Как-то папе пришел штраф за превышение скорости. И, то ли чтобы не платить штраф и потрепать нервы, то ли потому что считал себя правым, он решил взять фотографию превышения с камеры,
+          применить немного физики и доказать, что он не превышал.
+        </p>
+        <p>
+          Он взял длину смазывания верхней части колеса, диаметр колеса, высчитал угол камеры, нагуглил скорость затвора полицейской камеры и
+          высчитал по этим данным скорость автомобиля на фотографии. Меня до сих пор поражает, насколько можно заморочиться и найти себе интересное занятие в опротестовывании штрафа.
+        </p>
+        <p>
+          Что было в суде я не знаю, но, похоже, либо физике не место в суде, либо научная степень судьи оказалась выше, потому что штраф в итоге пришлось заплатить.
+        </p>
+      </blockquote>
+      <figcaption class="blockquote-footer text-end">
+        Святослав Сергеевич Думченко, сын
+      </figcaption>
+    </figure>
   </div>
 
   <div class="container bg-light shadow border p-4">
-    <h4 class="text-center">Корабль "Васа"</h4>
-    <p>
-      Это было в те времена, когда мы активно семьей ездили по скандинавским странам на выходные или в отпуски. Чтобы как-то тематически провести одну из таких поездок,
-      папа загорелся идеей съездить посмотреть корабль "Васа". Это был какой-то затонувший у берегов города королевский корабль, который просто достали из воды и соорудили музей.
-      Похоже, он решил не очень много времени потратить на проверку фактов и перепроверку маршрута, поэтому путь наш лежал в финский город Вааса на берегу Ботнического залива.
-    </p>
-    <p>
-      И вот мы приехали в маленький финский город Вааса и начали искать заветный корабль. Через какое-то время поисков обнаружилось, что самый большой корабль в этом городе - рыбацкая лодка.
-      Папа решил спросить у местных, где можно найти этот корабль. Но их ответ нас смутил - они вообще не в курсе, что у них должен быть какой-то королевский корабль.
-    </p>
-    <p>
-      В итоге у какой-то стойки информации нам нагуглили, что есть такой корабль, да. Но только он по другую сторону залива - в Стокгольме. А у нас в планах Швеции не было,
-      поэтому поездка за кораблем в итоге прошла без самого корабля.
-    </p>
-    <p>
-      Единственное запоминающееся для меня из той поездки - мы с папой плавали в Ботническом заливе при температуре воды где-то +19°, очень холодно и страшно.
-      А на корабль мы в итоге посмотрели в одной из следующих поездок в Швецию.
-    </p>
+    <figure>
+      <blockquote>
+        <p class="lead text-center display-6">Корабль "Васа"</p>
+        <p>
+          Это было в те времена, когда мы активно семьей ездили по скандинавским странам на выходные или в отпуски. Чтобы как-то тематически провести одну из таких поездок,
+          папа загорелся идеей съездить посмотреть корабль "Васа". Это был какой-то затонувший у берегов города королевский корабль, который просто достали из воды и соорудили музей.
+          Похоже, он решил не очень много времени потратить на проверку фактов и перепроверку маршрута, поэтому путь наш лежал в финский город Вааса на берегу Ботнического залива.
+        </p>
+        <p>
+          И вот мы приехали в маленький финский город Вааса и начали искать заветный корабль. Через какое-то время поисков обнаружилось, что самый большой корабль в этом городе - рыбацкая лодка.
+          Папа решил спросить у местных, где можно найти этот корабль. Но их ответ нас смутил - они вообще не в курсе, что у них должен быть какой-то королевский корабль.
+        </p>
+        <p>
+          В итоге у какой-то стойки информации нам нагуглили, что есть такой корабль, да. Но только он по другую сторону залива - в Стокгольме. А у нас в планах Швеции не было,
+          поэтому поездка за кораблем в итоге прошла без самого корабля.
+        </p>
+        <p>
+          Единственное запоминающееся для меня из той поездки - мы с папой плавали в Ботническом заливе при температуре воды где-то +19°, очень холодно и страшно.
+          А на корабль мы в итоге посмотрели в одной из следующих поездок в Швецию.
+        </p>
+      </blockquote>
+      <figcaption class="blockquote-footer text-end">
+        Святослав Сергеевич Думченко, сын
+      </figcaption>
+    </figure>
   </div>
 </div>
