Add new photo for reksam

--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -14,6 +14,7 @@ carouselPhotos:
   - /assets/images/IMG_0118.jpeg
   - /assets/images/IMG_0266.jpeg
   - /assets/images/IMG_0303.jpeg
+  - /assets/images/photo_2022-05-17 13.59.22.jpeg
 ---
 
 <div class="container text-center">
