Add elena.reksam text

--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -53,9 +53,9 @@ carouselPhotos:
       <button class="nav-link border rounded shadow p-2" id="nav-r3nic1e-tab" data-bs-toggle="tab" data-bs-target="#r3nic1e-tab" type="button" role="tab" aria-controls="nav-r3nic1e" aria-selected="false">
         Святослав Сергеевич Думченко, сын
       </button>
-      {%- comment -%} <button class="nav-link p-2 border" id="nav-elena-reksam-tab" data-bs-toggle="tab" data-bs-target="#elena-reksam-tab" type="button" role="tab" aria-controls="nav-elena-reksam" aria-selected="false">
+      <button class="nav-link border rounded shadow p-2" id="nav-elena-reksam-tab" data-bs-toggle="tab" data-bs-target="#elena-reksam-tab" type="button" role="tab" aria-controls="nav-elena-reksam" aria-selected="false">
         Елена Анатольевна Думченко, жена
-      </button> {%- endcomment -%}
+      </button>
     </div>
   </nav>
 
@@ -82,7 +82,26 @@ carouselPhotos:
       </div>
     </div>
     <div class="tab-pane fade" id="elena-reksam-tab" role="tabpanel" aria-labeledby="nav-elena-reksam-tab">
-      TBD
+      <div class="fw-light">
+        <p>
+          Мы познакомились еще в студенческие годы. Наша совместная жизнь была долгой, но недостаточно чтобы сказать: они состарились вместе. Ты ушел слишком рано и неожиданно.
+          Мы только начали привыкать к новому статусу пенсионеры, дедушка и бабушка. Всячески противились этому. Чувствовали себя еще молодыми, полными сил и желаний.
+        </p>
+        <p>
+          Когда повзрослели наши дети, в поисках приложения своих нерастраченных сил и желаний, мы завели собаку. Чтобы она стимулировала нас к продолжению активной жизни.
+          Именно ты всегда был инициатором наших поездок после которых оставалось много ярких впечатлений.
+        </p>
+        <p>
+          Жизнь с тобой никогда не была простой, но она точно не была однообразной.
+        </p>
+        <p>
+          К зрелому возрасту ты овладел столькими навыками что стал незаменимым для всех членов нашей семьи.  Практически любой ремонт квартир, техники, машин был тебе под силу.
+          И это, не говоря уже о профессиональных знаниях. Даже оформляя памятник, я не один раз пожалела, что тебя нет рядом, и не с кем посоветоваться.
+        </p>
+        <p>
+          Все это навсегда останется с нами. И именно этого больше никогда не будет.
+        </p>
+      </div>
     </div>
   </div>
 </div>
