--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     {% for person in site.people %}
     <div class="col">
       <div class="card col-md-4 text-center">
-        <img src="{{ person.mainPhoto | relative_url }}" class="img-fluid rounded">
+        <img src="{{ person.mainPhoto.path | relative_url }}" class="img-fluid rounded">
         <div class="card-body col-sm">
           <h5 class="card-title">{{ person.name }}</h5>
           <div class="card-text">{{ person.birthDate }} - {{ person.deathDate }}</div>
