Add one more story

--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -199,4 +199,29 @@ carouselPhotos:
       </figcaption>
     </figure>
   </div>
+
+  <div class="container bg-light shadow border p-4">
+    <figure>
+      <blockquote>
+        <p class="lead text-center display-6">Именование всего</p>
+        <p>
+          Папа любил давать всему свое уникальное название. Кроме названий квартир по названиям улиц, было еще много разных придумок:
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Reksam - его основной никнейм</li>
+            <li class="list-group-item">Tower - наш основной стационарный компьютер, происходило от названия форм-фактора таких компьютеров "Full-Tower"</li>
+            <li class="list-group-item">Мися - его личный ноутбук MSI</li>
+            <li class="list-group-item">Bolivar - его второй рабочий стационарный компьютер</li>
+            <li class="list-group-item">Субик - наш первый кот, полное имя Субарик - от марки машин Subaru, на которых он ездил</li>
+            <li class="list-group-item">Фор (4) - наша первая собака, имя получилось от Ford и от Subaru Forester - обе машины на момент обретения собаки. Фориком можно одновременно называть и собаку, и машину</li>
+            <li class="list-group-item">iRek Plus55 - его первый iPhone 6 Plus, в названии также участвует его ник и диагональ телефона (5,5")</li>
+            <li class="list-group-item">iRek noPro58 - его второй iPhone 11, в названии также есть ник, диагональ, а еще шутка, что это не iPhone 11 Pro</li>
+          </ul><br>
+          Это настолько привилось, что и я тоже стал давать всему названия в таком же стиле.
+        </p>
+      </blockquote>
+      <figcaption class="blockquote-footer text-end">
+        Святослав Сергеевич Думченко, сын
+      </figcaption>
+    </figure>
+  </div>
 </div>
