--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -4,26 +4,33 @@ name: Думченко Сергей Николаевич
 birthDate: 13.06.1962
 deathDate: 05.11.2021
 mainPhoto:
-  path: /assets/images/IMG_0204.jpeg
+  path: /assets/images/reksam/IMG_0204.jpeg
 carouselPhotos:
-  - path: /assets/images/IMG_6640.jpeg
-    caption: Зеленогорск, 10.10.2020
-  - path: /assets/images/2020-03-09 13-42-27.jpeg
-    caption: "09.03.2020"
-  - path: /assets/images/2b9011a5-1aca-4397-ae62-74b6b19ce259.jpg
-  - path: /assets/images/2020-03-09 13-42-47.jpeg
-    caption: "09.03.2020"
-  - path: /assets/images/IMG_0072.jpg
-    caption: На дне рождении Елены Анатольевны Думченко, 27.02.2021
-  - path: /assets/images/IMG_6393.jpeg
+  - path: /assets/images/reksam/IMG_8916.jpeg
+    caption: Приозерск, 30.10.2021. За неделю до...
+  - path: /assets/images/reksam/8632.jpeg
+    caption: Новая Голландия, 4.09.2021
+  - path: /assets/images/reksam/IMG_0095.jpeg
+  - path: /assets/images/reksam/IMG_6407.jpeg
     caption: Золотая Долина, 05.09.2020
-  - path: /assets/images/IMG_0118.jpeg
+  - path: /assets/images/reksam/IMG_6393.jpeg
+    caption: Золотая Долина, 05.09.2020
+  - path: /assets/images/reksam/IMG_6640.jpeg
+    caption: Зеленогорск, 10.10.2020
+  - path: /assets/images/reksam/2020-03-09 13-42-27.jpeg
+    caption: "09.03.2020"
+  - path: /assets/images/reksam/2b9011a5-1aca-4397-ae62-74b6b19ce259.jpeg
+  - path: /assets/images/reksam/2020-03-09 13-42-47.jpeg
+    caption: "09.03.2020"
+  - path: /assets/images/reksam/IMG_0072.jpeg
+    caption: 27.02.2021
+  - path: /assets/images/reksam/IMG_0118.jpeg
     caption: Первый Новый Год в новой квартире, 31.12.2003
-  - path: /assets/images/IMG_0266.jpeg
+  - path: /assets/images/reksam/IMG_0266.jpeg
     caption: Где-то в Финляндии, 06.07.2005
-  - path: /assets/images/IMG_0303.jpeg
+  - path: /assets/images/reksam/IMG_0303.jpeg
     caption: На пароме, вероятно, у Таллина, 12.01.2008
-  - path: /assets/images/photo_2022-05-17 13.59.22.jpeg
+  - path: /assets/images/reksam/photo_2022-05-17 13.59.22.jpeg
     caption: КПП Чарли, Берлин, 14.08.2004
 ---
 
@@ -32,29 +39,21 @@ carouselPhotos:
   <p class="display-6 text-muted">{{ page.birthDate }} - {{ page.deathDate }}</p>
 </div>
 
-<div class="container col-md-4">
+<div class="container">
   <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       {% assign photos = page.carouselPhotos | unshift: page.mainPhoto %}
       {% for photo in photos %}
-      <div class="carousel-item {% if photo == page.mainPhoto %}active{% endif %}">
-        <img src="{{ photo.path | relative_url }}" class="img-fluid img-thumbnail d-block w-100">
+      <div class="carousel-item {% if photo == page.mainPhoto %}active{% endif %}" style="height: 80vh">
+        <img src="{{ photo.path | relative_url }}" class="img-thumbnail d-block m-auto" style="max-height: 95%">
         {% if photo.caption %}
-        <div class="carousel-caption d-block m-0 p-0">
-          <p class="m-0 p-0 font-weight-bold bg-light text-black">{{ photo.caption }}</p>
+        <div class="text-center">
+          <p class="font-weight-bold text-black">{{ photo.caption }}</p>
         </div>
         {% endif %}
       </div>
       {% endfor %}
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
 </div>
 
