feat: tune bottom
Former-commit-id: e3ba8e7b45f7867c8d53e0bf00c77d8480db58e0

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1>Люди, которых мы потеряли:</h1>
 </div>
 
-<div class="container px-4">
+<div class="container px-4 pt-3">
   <div class="row row-cols-auto gx-5">
     {% for person in site.people %}
     <div class="col">
@@ -32,5 +32,7 @@ layout: default
 </div>
 
 <div class="fixed-bottom text-center">
+  <p class="h5 my-2">
   Наше генеалогическое древо на <a href="https://www.myheritage.com/site-family-tree-78241683/family-site">myheritage.com</a>
+  </p>
 </div>
