--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -3,6 +3,7 @@ layout: default
 name: Думченко Сергей Николаевич
 birthDate: 13.06.1962
 deathDate: 05.11.2021
+epitaph: Как много нашего ушло с тобой, как много твоего осталось с нами...
 mainPhoto:
   path: /assets/images/reksam/IMG_0204.jpeg
 carouselPhotos:
@@ -34,7 +35,7 @@ carouselPhotos:
     caption: КПП Чарли, Берлин, 14.08.2004
 ---
 
-<div class="container text-center">
+<div class="container text-center" id="start">
   <h1 class="display-3">{{ page.name }}</h1>
   <p class="display-6 text-muted">{{ page.birthDate }} - {{ page.deathDate }}</p>
 </div>
@@ -115,18 +116,18 @@ carouselPhotos:
     <div class="tab-pane fade" id="elena-reksam-tab" role="tabpanel" aria-labeledby="nav-elena-reksam-tab">
       <div class="fw-light">
         <p>
-          Мы познакомились еще в студенческие годы. Наша совместная жизнь была долгой, но недостаточно чтобы сказать: они состарились вместе. Ты ушел слишком рано и неожиданно.
-          Мы только начали привыкать к новому статусу пенсионеры, дедушка и бабушка. Всячески противились этому. Чувствовали себя еще молодыми, полными сил и желаний.
+          Мы познакомились еще в студенческие годы. Наша совместная жизнь была долгой, но недостаточно, чтобы сказать: они состарились вместе. Ты ушел слишком рано и неожиданно.
+          Мы только начали привыкать к новому статусу "пенсионеры", дедушка и бабушка. Всячески противились этому. Чувствовали себя еще молодыми, полными сил и желаний.
         </p>
         <p>
           Когда повзрослели наши дети, в поисках приложения своих нерастраченных сил и желаний, мы завели собаку. Чтобы она стимулировала нас к продолжению активной жизни.
-          Именно ты всегда был инициатором наших поездок после которых оставалось много ярких впечатлений.
+          Именно ты всегда был инициатором наших поездок, после которых оставалось много ярких впечатлений.
         </p>
         <p>
           Жизнь с тобой никогда не была простой, но она точно не была однообразной.
         </p>
         <p>
-          К зрелому возрасту ты овладел столькими навыками что стал незаменимым для всех членов нашей семьи.  Практически любой ремонт квартир, техники, машин был тебе под силу.
+          К зрелому возрасту ты овладел столькими навыками, что стал незаменимым для всех членов нашей семьи.  Практически любой ремонт квартир, техники, машин был тебе под силу.
           И это, не говоря уже о профессиональных знаниях. Даже оформляя памятник, я не один раз пожалела, что тебя нет рядом, и не с кем посоветоваться.
         </p>
         <p>
@@ -221,7 +222,7 @@ carouselPhotos:
       <blockquote>
         <p class="lead text-center display-6">Именование всего</p>
         <p>
-          Папа любил давать всему свое уникальное название. Кроме названий квартир по названиям улиц, было еще много разных придумок:
+          Папа любил давать всему свое уникальное название. Кроме названий квартир по названиям улиц (иногда по устаревшим названиям), было еще много разных придумок:
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Reksam - его основной никнейм</li>
             <li class="list-group-item">Tower - наш основной стационарный компьютер, происходило от названия форм-фактора таких компьютеров "Full-Tower"</li>
