--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="text-center">
-  <h1>Люди, которых мы потеряли:</h1>
+  <p class="display-3">Люди, которых мы потеряли:</p>
 </div>
 
 <div class="container px-4 pt-3">
@@ -23,6 +23,28 @@ layout: default
           </blockquote>
         </div>
         <a class="btn btn-primary stretched-link" href="{{ person.url | relative_url }}#start">Подробнее...</a>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
+<hr>
+
+<div class="text-center">
+  <p class="display-3">Кладбища</p>
+</div>
+
+<div class="container px-4 pt-3">
+  <div class="row row-cols-auto gx-5">
+    {% for grave in site.graves %}
+    <div class="col">
+      <div class="card col-md-4 text-center" style="width: 18rem;">
+        <div class="card-body col-sm">
+          <h5 class="card-title">{{ grave.name }}</h5>
+          <br/>
+        </div>
+        <a class="btn btn-primary stretched-link" href="{{ grave.url | relative_url }}#start">Подробнее...</a>
       </div>
     </div>
     {% endfor %}
