--- a/collections/_graves/newwolf.html
+++ b/collections/_graves/newwolf.html
@@ -4,6 +4,16 @@ name: Нововолковское кладбище
 photos:
   - path: /assets/images/newwolf/IMG_1813.jpeg
   - path: /assets/images/newwolf/IMG_1811.jpeg
+buried:
+  - name: Ванюкова Анастасия Сергеевна
+    birthDate: 07.01.1900
+    deathDate: 23.05.1970
+  - name: Ванюков Борис Владимирович
+    birthDate: 13.02.1927
+    deathDate: 09.07.2002
+  - name: Ванюков Анатолий Владимирович
+    birthDate: 15.04.1928
+    deathDate: 05.11.2015
 ---
 
 <div class="container text-center" id="start">
@@ -31,11 +41,36 @@ photos:
 <hr>
 
 <div class="container">
+  <p class="display-4">Похоронены</p>
+
+  <div class="container px-4 pt-3">
+    <div class="row row-cols-auto gx-5">
+      {% for buried in page.buried %}
+      <div class="col">
+        <div class="card col-md-4 text-center" style="width: 18rem;">
+          <div class="card-body col-sm">
+            <h5 class="card-title">{{ buried.name }}</h5>
+            <div class="card-text">{{ buried.birthDate }} - {{ buried.deathDate }}</div>
+            <br/>
+          </div>
+          {% if buried.link %}
+          <a class="btn btn-primary stretched-link" href="{{ buried.link | relative_url }}#start">Подробнее...</a>
+          {% endif %}
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="container">
   <p class="display-4">Фотографии</p>
 
   {% for photo in page.photos %}
   <figure class="figure">
-    <img src="{{ photo.path | relative_url }}" class="figure-img img-fluid rounded">
+    <img src="{{ photo.path | relative_url }}" class="figure-img img-fluid rounded" style="height: 90vh;">
     {% if photo.caption %}
     <figcaption class="figure-caption text-center font-weight-bold text-black">
       {{ photo.caption }}
