feat: add some guides

--- a/collections/_graves/newwolf.html
+++ b/collections/_graves/newwolf.html
@@ -34,7 +34,18 @@ buried:
   </div>
 
   <div class="container">
-    <p class="display-6">Ориентиры</p>
+    <p class="display-6">Как найти</p>
+    <p><strong>Во время ковидных ограничений вход со стороны Козловского пер. был заварен и надо было идти с другой стороны.</strong></p>
+    <p>
+      Заходим с пересечения Козловского пер. и Стрельбищенской ул. Проходим между желтым двухэтажным зданием и бетонной стеной и пролезаем через дырку в заборе. <strong>Тут перепад высот и можно легко упасть.</strong>
+    </p>
+    <p>
+      Попадаем сразу на дорожку и идем по ней (на запад) до первого пересечения. На пересечении сворачиваем направо.
+    </p>
+    <p>
+      Примерно через 100 метров справа будет дерево, стоящее в первом ряду могил, за которым синяя ограда. Прямо за могилой с синей оградой находится искомая могила.
+    </p>
+    <p><em>Дополнительный ориентир - через пару метров с левой стороны дороги располагается широкая дорогая черная могила. Ее можно заметить на одной из фотографий ниже.</em></p>
   </div>
 </div>
 
@@ -44,7 +55,7 @@ buried:
   <p class="display-4">Похоронены</p>
 
   <div class="container px-4 pt-3">
-    <div class="row row-cols-auto gx-5">
+    <div class="row row-cols-auto g-3">
       {% for buried in page.buried %}
       <div class="col">
         <div class="card col-md-4 text-center" style="width: 18rem;">
