--- a/collections/_graves/ohta.html
+++ b/collections/_graves/ohta.html
@@ -39,7 +39,35 @@ buried:
   </div>
 
   <div class="container">
-    <p class="display-6">Ориентиры</p>
+    <p class="display-6">Как найти</p>
+
+    <div class="container">
+      <p class="h4">Могила Ванюковой Нины Александровны</p>
+      <p><strong>К этой могиле бывает тяжело добраться, когда много воды или снега. Лучше приходить в летнее время.</strong></p>
+      <p>
+        От основного входа (с пр. Металлистов) идем сразу налево вдоль ворот и администрации. В конце здания администрации поворачиваем направо на Олонецкую дорожку.
+      </p>
+      <p>
+        Сворачиваем налево на какую-то там дорожку.
+      </p>
+    </div>
+
+    <div class="container">
+      <p class="h4">Могила Игнатьевой Анны Андреевны</p>
+    </div>
+
+    <div class="container">
+      <p class="h4">Могила Думченко Сергея Николаевича</p>
+      <p>
+        Участок называется "Речной". От основного входа (с пр. Металлистов) идем вдоль левой стороны церкви по Московской дорожке, на раздвоении идем на правую Харьковскую дорожку, затем сворачиваем направо к мосту (Бородинская дорожка).
+      </p>
+      <p>
+        В начале моста слева есть лестница вниз - спускаемся по ней и попадаем в начало Речного участка (сам участок будет по левую руку). Идем по участку до бетонных оснований справа и изгиба участка налево.
+      </p>
+      <p>
+        Могила находится в следующем ряду после изгиба вторая слева.
+      </p>
+    </div>
   </div>
 </div>
 
@@ -49,7 +77,7 @@ buried:
   <p class="display-4">Похоронены</p>
 
   <div class="container px-4 pt-3">
-    <div class="row row-cols-auto gx-5">
+    <div class="row row-cols-auto g-3">
       {% for buried in page.buried %}
       <div class="col">
         <div class="card col-md-4 text-center" style="width: 18rem;">
