--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 </div>
 
 <div class="container px-4 pt-3">
-  <div class="row row-cols-auto gx-5">
+  <div class="row row-cols-auto g-5">
     {% for person in site.people %}
     <div class="col">
       <div class="card col-md-4 text-center">
@@ -36,7 +36,7 @@ layout: default
 </div>
 
 <div class="container px-4 pt-3">
-  <div class="row row-cols-auto gx-5">
+  <div class="row row-cols-auto g-5">
     {% for grave in site.graves %}
     <div class="col">
       <div class="card col-md-4 text-center" style="width: 18rem;">
