feat: update guide

--- a/collections/_graves/ohta.html
+++ b/collections/_graves/ohta.html
@@ -48,7 +48,10 @@ buried:
         От основного входа (с пр. Металлистов) идем сразу налево вдоль ворот и администрации. В конце здания администрации поворачиваем направо на Олонецкую дорожку.
       </p>
       <p>
-        Сворачиваем налево на какую-то там дорожку.
+        Сворачиваем налево на Кахетинскую дорожку (после Онежской и Галицкой дорожек и перед Мезенской и Углической дорожками).
+      </p>
+      <p>
+        Где-то с левой стороны (допишем).
       </p>
     </div>
 
@@ -103,7 +106,7 @@ buried:
 
   {% for photo in page.photos %}
   <figure class="figure">
-    <img src="{{ photo.path | relative_url }}" class="figure-img img-fluid rounded">
+    <img src="{{ photo.path | relative_url }}" class="figure-img img-fluid rounded" style="height: 90vh;">
     {% if photo.caption %}
     <figcaption class="figure-caption text-center font-weight-bold text-black">
       {{ photo.caption }}
